refactor: Create Message class
#10

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10.13
 WORKDIR /app
 
 COPY main.py /app
+COPY message.py /app
 COPY requirements.txt /app
 
 RUN python -m pip install --upgrade pip; pip install -r /app/requirements.txt
